crimecorp changes + advanced aquatic

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -522,7 +522,12 @@
 
 	trait_tec_salty:0 "Salty"
 	trait_tec_salty_desc:0 "§LThis lithoid species has the curious evolutionary adaptation of having a really rich mineral composition, that can be used either for high quality alloys or delicious condiments.§!"
-	TRAIT_TEC_GENE_BRAIN_EFFECT:0 "§YThis trait generates special leader traits for some §YRulers§! of this species.§!"
+
+	trait_tec_advanced_aquatic:0 "Amphibian"
+	trait_tec_advanced_aquatic_desc:0 "§LThis species is perfectly adapted to living in the depths of the ocean, and has specific genetic improvements to not suffer that much on non humid environments.§!"
+	TRAIT_TEC_ADVANCED_AQUATIC_EFFECT:0 "Housing Usage on §YWet§! worlds and §YFlooded Habitats§!: §G-10%§!\nJob output on §YWet§! worlds: §G+10%§!\nHousing Usage on §YDry§! worlds: §R+30%§!\nHabitability on §YDry§! worlds: §R-20%§!\n\nThe §H$ap_hydrocentric$§! Ascension Perk amplifies this trait's effects."
+	trait_aquatic_remove_evolutionary_mastery:1 "§RRequires §Y$tr_genetics_resequencing$§! Tradition to remove.§!"
+	trait_aquatic_remove_hydrocentric:0 "§RCannot remove §Y$trait_aquatic$§! or §Y$trait_tec_advanced_aquatic$§! trait after taking §Y$ap_hydrocentric$§! Ascension Perk.§!"
 
 	#trait_tec_gene_malleable:0 "Gene-Malleable"
 	#trait_tec_gene_malleable_desc:0 "§LThe genetic composition of this species is intelligently altered to suit a myriad #of characteristics and new code without risking mutations or excessive biological stress.§!"
@@ -1565,14 +1570,14 @@
 # /
 
 # Ai auth
-trait_tec_aiauth_ruler: "Ruler AI Node"
-trait_tec_aiauth_ruler_desc: "The Ruler AI Node, a pinnacle of artificial intelligence, assumes the mantle of heading and controlling the state. Endowed with eternal existence and unparalleled computational prowess, it stands as the undying architect of unending progress within our empire."
+	trait_tec_aiauth_ruler: "Ruler AI Node"
+	trait_tec_aiauth_ruler_desc: "The Ruler AI Node, a pinnacle of artificial intelligence, assumes the mantle of heading and controlling the state. Endowed with eternal existence and unparalleled computational prowess, it stands as the undying architect of unending progress within our empire."
 
-trait_tec_aiauth_node: "Councilor AI Node"
-trait_tec_aiauth_node_desc: "The Councilor AI Node, plays a vital role as a catalyst for diverse perspectives within our AI Administration. Embracing a contrarian approach, it challenges established notions and injects critical dissent into the ruling AI hierarchy. By introducing alternative viewpoints and thought-provoking insights, this Councilor AI Node enriches our decision-making processes, promoting a culture of innovation, adaptability, and resilience."
+	trait_tec_aiauth_node: "Councilor AI Node"
+	trait_tec_aiauth_node_desc: "The Councilor AI Node, plays a vital role as a catalyst for diverse perspectives within our AI Administration. Embracing a contrarian approach, it challenges established notions and injects critical dissent into the ruling AI hierarchy. By introducing alternative viewpoints and thought-provoking insights, this Councilor AI Node enriches our decision-making processes, promoting a culture of innovation, adaptability, and resilience."
 
-trait_tec_aiauth_planetary_node: "Planetary AI Node"
-trait_tec_aiauth_planetary_node_desc: "The Planetary AI Node, housed within the $building_tec_planetary_node_center$, diligently controlls and manages the complexities of its assigned planet. Leveraging its computational prowess, the Planetary AI Node optimizes productivity, allocates resources, and ensures the harmonious development of its world."
+	trait_tec_aiauth_planetary_node: "Planetary AI Node"
+	trait_tec_aiauth_planetary_node_desc: "The Planetary AI Node, housed within the $building_tec_planetary_node_center$, diligently controlls and manages the complexities of its assigned planet. Leveraging its computational prowess, the Planetary AI Node optimizes productivity, allocates resources, and ensures the harmonious development of its world."
 
 # /
 
