--- a/localisation/english/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/zz_evolved_ascension_l_english.yml
@@ -3190,8 +3190,8 @@ tech_reverse_advanced_dome: " "
 # ------------------------------------------------------------
 
 # --------------------------- D E B U G -------------------------------- 
-	edict_tec_fix_my_game_edict:0 "Fix my ascension"
-	edict_tec_fix_my_game_edict_desc:0 "Fixes an ongoin ascension - If it doesn't please open a ticket. If this edicts appears without a bugged ascension, also open me a ticket"
+	edict_tec_fix_my_game_edict:0 "Fix my Game"
+	edict_tec_fix_my_game_edict_desc:0 "Fixes an ongoing Game - If it doesn't please open a ticket."
 
 	edict_tec_fix_my_flags:0 "Fix my flags"
 	edict_tec_fix_my_flags_desc:0 "Fixed changed flags - This edict should not appear for normal empires, or appear on certain conditions"
