democratic/dirdem changes

--- a/localisation/english/zz_evolved_modifiers_l_english.yml
+++ b/localisation/english/zz_evolved_modifiers_l_english.yml
@@ -438,6 +438,7 @@
 # ------------------------------------------------------------
  # HIDDEN MODIFIERS
 # ------------------------------------------------------------
+ # Pop modifiers
 	tec_converged_pop:0 "Converged"
 	tec_converged_pop_desc:0 "An special psionic ritual merged another psionic pop with this pop."
 
@@ -446,6 +447,18 @@
 
 	tec_demote_me_senpai:0 "Pop demotion modifier"
 	tec_demote_me_senpai_desc:0 "Made so pops demote rapidly"
+ # /
+
+ # Country Modifiers
+	country_modifier_tec_dirdem_bonus:0 "§HDemocratic Expertise§!"
+	country_modifier_tec_dirdem_bonus_desc:0 "§LThose loved by the people are the whose deserve to govern§!"
+	mod_councilor_ruler_auth_tec_direct_democratic_exp_gain:0 "Ruler Experience Gain"
+
+	country_modifier_tec_dem_bonus:0 "§HDemocratic Prowess§!"
+	country_modifier_tec_dem_bonus_desc:0 "§LReelected candidates have adapted their bureaus for a better democratic efficiency§!"
+	mod_councilor_ruler_democratic_exp_gain:0 "Ruler Experience Gain"
+ # /
+
 
  tec_technoascendancy_base:0 "Technological Ascendancy"
  tec_technoascendancy_base_desc:0 "§EFuture awaits§!"
