--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -38,13 +38,15 @@
 	auth_direct_democratic_desc:0 "With people being directly involved in governing and deciding on policy initiatives, bureaucratic efficiency is increased and both social and economical development are accelerated."
 
 	TEC_AUTH_DIRECT_DEMOCRATIC_TYPES: "['concept_tec_authority_type_democratic_type']\n"
-
-	AUTHORITY_ELECTION_DIRECT_DEMOCRATIC:0 "Holds an election every §H5§! years to select a new Ruler. Re-elections are not allowed."
+	TEC_AUTHORITY_ELECTION_DIRECT_DEMOCRATIC:0 "§HElection Type:§! Holds an election every §H5§! years to select a new Ruler. Re-elections are not allowed."
+	TEC_AUTH_DIRECT_DEMOCRATIC_RULER_MECHANIC:0 "§HExclusive Mechanic:§!\nElected rulers will gain §G2§! £mod_councilor_skill_add£ §YLevels§! when elected for the 1st time, and §G1§! £mod_councilor_skill_add£ §YLevel§! and §G+50%§! Experience Gain during its legislature."
 
 	auth_democratic:0 "Democratic"
 	auth_democratic_desc:0 "Democratic governments have regular elections where all citizens can vote on who should represent them."
 
 	TEC_AUTH_DEMOCRATIC_TYPES: "['concept_tec_authority_type_democratic_type']\n"
+	TEC_AUTHORITY_ELECTION_DEMOCRATIC:0 "§HElection Type:§! Holds an election every §H10§! years to select a new Ruler. Re-elections are not allowed."
+	TEC_AUTH_DEMOCRATIC_RULER_MECHANIC:0 "§HExclusive Mechanic:§!\nElected rulers will gain §G1§! £mod_councilor_skill_add£ §YLevels§! when elected for the 1st time, and §G+25%§! Experience Gain during its legislature."
 
 	auth_democratic_tt:0 "Resets Government Reform and Policy Cooldowns when a new $councilor_ruler_democratic$ is elected."
 
