Fixed trade policies tooltips, added new ui buttons for ai auth fragmenting

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -78,6 +78,7 @@
 	tec_loc_building_slots: "$planet_automation_building_slot$"
 
 	tec_loc_edict_capacity: "£mod_country_edict_fund_add£ Edict Capacity"
+	tec_loc_naval_capacity: "£mod_country_naval_cap_add£ $MOD_COUNTRY_NAVAL_CAP_ADD$"
 	tec_loc_admincap: "£mod_country_admin_cap_add£ $MOD_COUNTRY_ADMIN_CAP_ADD$"
 
 	tec_loc_district: "£district£ District"
@@ -336,7 +337,7 @@ tec_aiauth_node_share_total_tooltip: "\n\nExperience Weight Share/Total: §Y[tec
 tec_can_not_dismiss_aiauth_planetary_nodes: "§RCan't Dismiss Planetary AI Nodes, you must demolish the $building_tec_planetary_node_center$§!"
 
 tec_cui_aiauth_fragmenting_node: "$TRIGGER_FAIL$Cannot fragment another AI Node as a node is already being fragmented in this moment."
-tec_cui_aiauth_fragmenting_cost_effect: "\n\nFragmentation will cost §Y£unity£ [tec_aiauth_fragment_cost] Unity§!"
+tec_cui_aiauth_fragmenting_cost_effect: "\n\nFragmentation will cost §Y£unity£ [tec_aiauth_fragment_cost] Unity§!.\nIf fragmentation is not finished, the unity cost is §Rwasted§!"
 
 tec_cui_aiauth_refragment_node: "This node will be re-fragmented, generating a new set of traits and qualities."
 tec_cui_aiauth_finish_fragmenting_node: "This AI Node will join your empire."
