--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -134,23 +134,21 @@
 	job_roboticist_effect_desc:0 "£job_roboticist£ $job_roboticist_plural$ turn [root.GetTecRoboticistUpkeep] into new £pop£ §YRobot Pops§!"
 
 	job_culture_worker_effect_desc:0 "£job_culture_worker£ $job_culture_worker_plural$ turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_unity$§!$tec_culture_worker_cleanup$ and £mod_ethic_attraction_mult£ §Y$MOD_POP_GOVERNMENT_ETHIC_ATTRACTION$§!."
-	tec_culture_worker_cleanup:0 "[Owner.tec_cw_fallback_bonus][Owner.tec_cw_mat_bonus][Owner.tec_cw_mil_bonus][Owner.tec_cw_auth_bonus][Owner.tec_cw_xen_bonus][Owner.tec_cw_eco_bonus][Owner.tec_cw_comp_bonus][Owner.tec_cw_eli_bonus]"
-	tec_cw_fallback_bonus_desc:0 ", §Y£unity£ Increased Unity from Jobs§!"
-	tec_cw_mat_bonus_desc:0 ", §Y£job_researcher£ Researcher Upkeep Reduction§!"
-	tec_cw_spi_bonus_desc:0 ", §Y£pop£ $MOD_POP_AMENITIES_USAGE_MULT$ Reduction§!"
-	tec_cw_mil_bonus_desc:0 ", §Y£mod_country_naval_cap_add£ $MOD_COUNTRY_NAVAL_CAP_ADD$§!"
-	tec_cw_pac_bonus_desc:0 ", §Y£mod_edict_cap_add£ Edict Funds§!"
-	tec_cw_lib_bonus_desc:0 ", §Y£pop_cat_worker£ $mod_pop_cat_worker_political_power$§!"
-	tec_cw_auth_bonus_desc:0 ", §Y£pop_cat_ruler£ $mod_pop_cat_ruler_political_power$§!" 
-# Deliberately left empty
-	tec_cw_phobe_bonus_desc:0 ""
-	tec_cw_phile_bonus_desc:0 ", §Y$MOD_POP_HOUSING_USAGE_MULT$§!"
+	tec_culture_worker_cleanup:0 "[Owner.tec_cw_mat_bonus][Owner.tec_cw_mil_bonus][Owner.tec_cw_auth_bonus][Owner.tec_cw_xen_bonus][Owner.tec_cw_eco_bonus][Owner.tec_cw_comp_bonus][Owner.tec_cw_eli_bonus]"
+	tec_cw_mat_bonus_desc:0 ", §Y$tec_loc_edict_capacity$§!"
+	tec_cw_spi_bonus_desc:0 ", §Y$mod_planet_pops_upkeep_mult$ Reduction§!"
+	tec_cw_mil_bonus_desc:0 ", §Y$tec_loc_naval_capacity$§!"
+	tec_cw_pac_bonus_desc:0 ", §Y$mod_pop_lifestyle_trade_mult$§!"
+	tec_cw_egal_bonus_desc:0 ", §Y$MOD_POP_CITIZEN_HAPPINESS$§!"
+	tec_cw_auth_bonus_desc:0 ", §Y$tec_loc_stability$§!"
+	tec_cw_phobe_bonus_desc:0 "§Y$mod_planet_jobs_tec_main_species_produces_mult$§!"
+	tec_cw_phile_bonus_desc:0 ", §Y$MOD_POP_GROWTH_FROM_IMMIGRATION$§!"
 	tec_cw_green_bonus_desc:0 ", §Y$mod_planet_structures_upkeep_mult$ Reduction§!"
 	tec_cw_ind_bonus_desc:0 ", §Y$MOD_PLANET_BUILDING_BUILD_SPEED_MULT$§!"
 	tec_cw_comp_bonus_desc:0 ", §Y$mod_pop_job_trade_mult$§!"
-	tec_cw_coop_bonus_desc:0 ", §Y$mod_pop_job_amenities_mult$§!"
-	tec_cw_eli_bonus_desc:0 ", §Y£pop_cat_specialist£ $mod_pop_cat_specialist_political_power$§!"
-	tec_cw_ega_bonus_desc:0 ", §Y£stability£ $MOD_PLANET_STABILITY_ADD$§!"
+	tec_cw_coop_bonus_desc:0 ", §Y$tec_loc_amenities$§!"
+	tec_cw_eli_bonus_desc:0 ", §Y$mod_planet_jobs_ruler_produces_mult$§!"
+	tec_cw_plur_bonus_desc:0 ", §Y$MOD_PLANET_HOUSING_MULT$§!"
 
 	job_death_chronicler_effect_desc:1 "£job_death_chronicler£ $job_death_chronicler_plural$ turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_unity$§!$tec_culture_worker_cleanup$ and £stability£ §YStability§!"
 	job_death_chronicler_effect_desc_civic:1 "£job_death_chronicler£ $job_death_chronicler_plural$ turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_unity$§!, bonuses based on the empire §YEthics§! and £stability£ §YStability§!"
