more updates and etc

--- a/localisation/english/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/zz_evolved_ascension_l_english.yml
@@ -3193,6 +3193,9 @@ tech_reverse_advanced_dome: " "
 	edict_tec_fix_my_game_edict:0 "Fix my Game"
 	edict_tec_fix_my_game_edict_desc:0 "Fixes an ongoing Game - If it doesn't please open a ticket."
 
+	edict_tec_fix_species_edict:0 "Fix Aquatics"
+	edict_tec_fix_species_edict_desc:0 "Fixes aquatic gene/replicant species on ongoing Game - If it doesn't please open a ticket."
+
 	edict_tec_fix_my_flags:0 "Fix my flags"
 	edict_tec_fix_my_flags_desc:0 "Fixed changed flags - This edict should not appear for normal empires, or appear on certain conditions"
 
