--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -2,10 +2,10 @@
 
 
 # living standards
- living_standard_hive_mind_research:0 "Subprocessing Drone"
- living_standard_hive_mind_research_tooltip:0 "Though this kind of drone keeps its simplicity and spartan subsistence, it uses part of its consciousness link to boost the collective while develops its assigned tasks."
- living_standard_hive_mind_research_tooltip_delayed:0 "§LThe needs of the individual and the needs of all are one and the same.§!"
-
+	living_standard_hive_mind_research:0 "Subprocessing Drone"
+	living_standard_hive_mind_research_tooltip:0 "Though this kind of drone keeps its simplicity and spartan subsistence, it uses part of its consciousness link to boost the collective while develops its assigned tasks."
+	living_standard_hive_mind_research_tooltip_delayed:0 "§LThe needs of the individual and the needs of all are one and the same.§!"
+# /
 
 # assimilation Rules
 
@@ -109,54 +109,67 @@
 # /
 
 # Biotrophies additions
-tec_unworthy_biopop_citizenship:0 "$TRIGGER_FAIL$These dirty xeno bioforms are not worthy of our care, and only shall serve our creators."
+	tec_unworthy_biopop_citizenship:0 "$TRIGGER_FAIL$These dirty xeno bioforms are not worthy of our care, and only shall serve our creators."
 
 
 # Archetypes
- # bioservant is at its own file
- REPLICANT:0 "Replicant"
- REPLICANT_plural:0 "Replicant"
- NAME_REPLICANT:0 "Replicant"
- REPLICANT_desc:0 "Extremely advanced bio-synthetic organisms, completely undistinguishable in appearance, function or feelings to another organic being, but way more resilient, faster and stronger."
+ # Graphical cultures
+	TEC_SOLARPUNK:0 "Solarpunk"
+	TEC_SOLARPUNK_plural:0 "Solarpunk"
+	NAME_TEC_SOLARPUNK:0 "Solarpunk"
 
- REPLICANT_insult_01:0 "experiment"
- REPLICANT_insult_plural_01:0 "experiments"
- REPLICANT_compliment_01:0 "wonder"
- REPLICANT_compliment_plural_01:0 "wonders"
- REPLICANT_spawn:0 "youngling"
- REPLICANT_spawn_plural:0 "younglings"
- REPLICANT_sound_01:0 "grunting"
- REPLICANT_sound_02:0 "growling"
- REPLICANT_sound_03:0 "yownling"
- REPLICANT_sound_04:0 "whizzing"
- REPLICANT_sound_05:0 "shrieking"
- REPLICANT_organ:0 "organ"
- REPLICANT_organ_plural:0 "organs"
- REPLICANT_mouth:0 "mouth"
- REPLICANT_hand:0 "extremity"
- REPLICANT_hand_plural:0 "extremities"
- REPLICANT_ear:0 "auditive organ"
- REPLICANT_ear_plural:0 "auditive organs"
- REPLICANT_tooth:0 "tooth"
- REPLICANT_tooth_plural:0 "teeth"
- REPLICANT_fossil:0 "piece"
- REPLICANT_fossil_plural:0 "pieces"
- REPLICANT_remnant:0 "remaining"
- REPLICANT_remnant_plural:0 "remainings"
+	TEC_BIOHIVE:0 "Organic"
+	TEC_BIOHIVE_plural:0 "Organic"
+	NAME_TEC_BIOHIVE:0 "Organic"
+
+	TEC_MECHHIVE:0 "Biomechanical"
+	TEC_MECHHIVE_plural:0 "Biomechanical"
+	NAME_TEC_MECHHIVE:0 "Biomechanical"
+ # /
+ # bioservant is at its own file
+	REPLICANT:0 "Replicant"
+	REPLICANT_plural:0 "Replicant"
+	NAME_REPLICANT:0 "Replicant"
+	REPLICANT_desc:0 "Extremely advanced bio-synthetic organisms, completely undistinguishable in appearance, function or feelings to another organic being, but way more resilient, faster and stronger."
+
+	REPLICANT_insult_01:0 "experiment"
+	REPLICANT_insult_plural_01:0 "experiments"
+	REPLICANT_compliment_01:0 "wonder"
+	REPLICANT_compliment_plural_01:0 "wonders"
+	REPLICANT_spawn:0 "youngling"
+	REPLICANT_spawn_plural:0 "younglings"
+	REPLICANT_sound_01:0 "grunting"
+	REPLICANT_sound_02:0 "growling"
+	REPLICANT_sound_03:0 "yownling"
+	REPLICANT_sound_04:0 "whizzing"
+	REPLICANT_sound_05:0 "shrieking"
+	REPLICANT_organ:0 "organ"
+	REPLICANT_organ_plural:0 "organs"
+	REPLICANT_mouth:0 "mouth"
+	REPLICANT_hand:0 "extremity"
+	REPLICANT_hand_plural:0 "extremities"
+	REPLICANT_ear:0 "auditive organ"
+	REPLICANT_ear_plural:0 "auditive organs"
+	REPLICANT_tooth:0 "tooth"
+	REPLICANT_tooth_plural:0 "teeth"
+	REPLICANT_fossil:0 "piece"
+	REPLICANT_fossil_plural:0 "pieces"
+	REPLICANT_remnant:0 "remaining"
+	REPLICANT_remnant_plural:0 "remainings"
 
 
 # Unsure?
- BIOSERVANT_organ_plural:0 "Biocreation organs"
- BIOSERVANT_hand:0 "Biocreation hand"
- BIOSERVANT_hand_plural:0 "Biocreation hands"
- BIOSERVANT_ear:0 "Biocreation ear"
- BIOSERVANT_ear_plural:0 "Biocreation ears"
- BIOSERVANT_tooth:0 "Biocreation tooth"
- BIOSERVANT_tooth_plural:0 "Biocreation teeth"
- BIOSERVANT_fossil:0 "Biocreation fossil"
- BIOSERVANT_fossil_plural:0 "Biocreation fossils"
- BIOSERVANT_remnant:0 "Biocreation remnant"
- BIOSERVANT_remnant_plural:0 "Biocreation remnants"
+	BIOSERVANT_organ_plural:0 "Biocreation organs"
+	BIOSERVANT_hand:0 "Biocreation hand"
+	BIOSERVANT_hand_plural:0 "Biocreation hands"
+	BIOSERVANT_ear:0 "Biocreation ear"
+	BIOSERVANT_ear_plural:0 "Biocreation ears"
+	BIOSERVANT_tooth:0 "Biocreation tooth"
+	BIOSERVANT_tooth_plural:0 "Biocreation teeth"
+	BIOSERVANT_fossil:0 "Biocreation fossil"
+	BIOSERVANT_fossil_plural:0 "Biocreation fossils"
+	BIOSERVANT_remnant:0 "Biocreation remnant"
+	BIOSERVANT_remnant_plural:0 "Biocreation remnants"
 
 # Trait tooltips
-trait_tec_natural_sync_tooltip: "$tec_loc_pop_growth$ on Perfect Planets: §G+10%§!\n$tec_loc_biological_assembly$ on Perfect Planets: §G+10%§!\n\nThe §H$ap_world_shaper$§! Ascension Perk amplifies this trait's effects."
+	trait_tec_natural_sync_tooltip: "$tec_loc_pop_growth$ on Perfect Planets: §G+10%§!\n$tec_loc_biological_assembly$ on Perfect Planets: §G+10%§!\n\nThe §H$ap_world_shaper$§! Ascension Perk amplifies this trait's effects."
