--- a/localisation/english/replace/zzzz_uml_modifier_l_english.yml
+++ b/localisation/english/replace/zzzz_uml_modifier_l_english.yml
@@ -16086,6 +16086,112 @@
  mod_planet_tec_labour_heroes_all_industrial_upkeep_add: "$mod_planet_tec_labour_heroes_all_industrial_upkeep_mult$"
  mod_planet_tec_labour_heroes_all_basic_upkeep_add: "$mod_planet_tec_labour_heroes_all_basic_upkeep_mult$"
 
+ # planet_tec_transcends - £job_transcend£ $job_transcend_plural$
+ mod_base_planet_tec_transcends: "£job_transcend£ $job_transcend_plural$"
+
+ mod_planet_tec_transcends_produces_mult: "£job_transcend£ $job_transcend_plural$ Output"
+ mod_planet_tec_transcends_upkeep_mult: "£job_transcend£ $job_transcend_plural$ Upkeep"
+
+ mod_planet_tec_transcends_minerals_produces_mult: "£minerals£ $minerals$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_food_produces_mult: "£food£ $food$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_energy_produces_mult: "£energy£ $energy$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_consumer_goods_produces_mult: "£consumer_goods£ $consumer_goods$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_alloys_produces_mult: "£alloys£ $alloys$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_physics_research_produces_mult: "£physics_research£ $physics_research$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_society_research_produces_mult: "£society_research£ $society_research$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_engineering_research_produces_mult: "£engineering_research£ $engineering_research$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_rare_crystals_produces_mult: "£rare_crystals£ $rare_crystals$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_volatile_motes_produces_mult: "£volatile_motes£ $volatile_motes$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_exotic_gases_produces_mult: "£exotic_gases£ $exotic_gases$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_unity_produces_mult: "£unity£ $unity$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_influence_produces_mult: "£influence£ $influence$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_sr_living_metal_produces_mult: "£sr_living_metal£ $sr_living_metal$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_sr_zro_produces_mult: "£sr_zro£ $sr_zro$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_sr_dark_matter_produces_mult: "£sr_dark_matter£ $sr_dark_matter$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_nanites_produces_mult: "£nanites£ $nanites$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_minor_artifacts_produces_mult: "£minor_artifacts£ $minor_artifacts$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_sr_tec_ai_power_produces_mult: "£sr_tec_ai_power£ $sr_tec_ai_power$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_pop_growth_produces_mult: "$tec_loc_pop_growth$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_biological_assembly_produces_mult: "$tec_loc_biological_assembly$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_assembly_produces_mult: "$tec_loc_assembly$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_all_research_produces_mult: "$tec_loc_research_resources$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_all_industrial_produces_mult: "$tec_loc_industrial_resources$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_all_basic_produces_mult: "$tec_loc_basic_resources$ from £job_transcend£ $job_transcend_plural$"
+
+ mod_planet_tec_transcends_minerals_produces_add: "$mod_planet_tec_transcends_minerals_produces_mult$"
+ mod_planet_tec_transcends_food_produces_add: "$mod_planet_tec_transcends_food_produces_mult$"
+ mod_planet_tec_transcends_energy_produces_add: "$mod_planet_tec_transcends_energy_produces_mult$"
+ mod_planet_tec_transcends_consumer_goods_produces_add: "$mod_planet_tec_transcends_consumer_goods_produces_mult$"
+ mod_planet_tec_transcends_alloys_produces_add: "$mod_planet_tec_transcends_alloys_produces_mult$"
+ mod_planet_tec_transcends_physics_research_produces_add: "$mod_planet_tec_transcends_physics_research_produces_mult$"
+ mod_planet_tec_transcends_society_research_produces_add: "$mod_planet_tec_transcends_society_research_produces_mult$"
+ mod_planet_tec_transcends_engineering_research_produces_add: "$mod_planet_tec_transcends_engineering_research_produces_mult$"
+ mod_planet_tec_transcends_rare_crystals_produces_add: "$mod_planet_tec_transcends_rare_crystals_produces_mult$"
+ mod_planet_tec_transcends_volatile_motes_produces_add: "$mod_planet_tec_transcends_volatile_motes_produces_mult$"
+ mod_planet_tec_transcends_exotic_gases_produces_add: "$mod_planet_tec_transcends_exotic_gases_produces_mult$"
+ mod_planet_tec_transcends_unity_produces_add: "$mod_planet_tec_transcends_unity_produces_mult$"
+ mod_planet_tec_transcends_influence_produces_add: "$mod_planet_tec_transcends_influence_produces_mult$"
+ mod_planet_tec_transcends_sr_living_metal_produces_add: "$mod_planet_tec_transcends_sr_living_metal_produces_mult$"
+ mod_planet_tec_transcends_sr_zro_produces_add: "$mod_planet_tec_transcends_sr_zro_produces_mult$"
+ mod_planet_tec_transcends_sr_dark_matter_produces_add: "$mod_planet_tec_transcends_sr_dark_matter_produces_mult$"
+ mod_planet_tec_transcends_nanites_produces_add: "$mod_planet_tec_transcends_nanites_produces_mult$"
+ mod_planet_tec_transcends_minor_artifacts_produces_add: "$mod_planet_tec_transcends_minor_artifacts_produces_mult$"
+ mod_planet_tec_transcends_sr_tec_ai_power_produces_add: "$mod_planet_tec_transcends_sr_tec_ai_power_produces_mult$"
+ mod_planet_tec_transcends_amenities_produces_add: "$tec_loc_amenities$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_stability_produces_add: "$tec_loc_stability$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_trade_value_produces_add: "$tec_loc_trade_value$ from £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_biological_assembly_produces_add: "$mod_planet_tec_transcends_biological_assembly_produces_mult$"
+ mod_planet_tec_transcends_assembly_produces_add: "$mod_planet_tec_transcends_assembly_produces_mult$"
+ mod_planet_tec_transcends_all_research_produces_add: "$mod_planet_tec_transcends_all_research_produces_mult$"
+ mod_planet_tec_transcends_all_industrial_produces_add: "$mod_planet_tec_transcends_all_industrial_produces_mult$"
+ mod_planet_tec_transcends_all_basic_produces_add: "$mod_planet_tec_transcends_all_basic_produces_mult$"
+
+ mod_planet_tec_transcends_minerals_upkeep_mult: "£minerals£ $minerals$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_food_upkeep_mult: "£food£ $food$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_energy_upkeep_mult: "£energy£ $energy$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_consumer_goods_upkeep_mult: "£consumer_goods£ $consumer_goods$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_alloys_upkeep_mult: "£alloys£ $alloys$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_physics_research_upkeep_mult: "£physics_research£ $physics_research$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_society_research_upkeep_mult: "£society_research£ $society_research$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_engineering_research_upkeep_mult: "£engineering_research£ $engineering_research$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_rare_crystals_upkeep_mult: "£rare_crystals£ $rare_crystals$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_volatile_motes_upkeep_mult: "£volatile_motes£ $volatile_motes$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_exotic_gases_upkeep_mult: "£exotic_gases£ $exotic_gases$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_unity_upkeep_mult: "£unity£ $unity$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_influence_upkeep_mult: "£influence£ $influence$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_sr_living_metal_upkeep_mult: "£sr_living_metal£ $sr_living_metal$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_sr_zro_upkeep_mult: "£sr_zro£ $sr_zro$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_sr_dark_matter_upkeep_mult: "£sr_dark_matter£ $sr_dark_matter$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_nanites_upkeep_mult: "£nanites£ $nanites$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_minor_artifacts_upkeep_mult: "£minor_artifacts£ $minor_artifacts$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_sr_tec_ai_power_upkeep_mult: "£sr_tec_ai_power£ $sr_tec_ai_power$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_all_research_upkeep_mult: "$tec_loc_research_resources$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_all_industrial_upkeep_mult: "$tec_loc_industrial_resources$ Upkeep of £job_transcend£ $job_transcend_plural$"
+ mod_planet_tec_transcends_all_basic_upkeep_mult: "$tec_loc_basic_resources$ Upkeep of £job_transcend£ $job_transcend_plural$"
+
+ mod_planet_tec_transcends_minerals_upkeep_add: "$mod_planet_tec_transcends_minerals_upkeep_mult$"
+ mod_planet_tec_transcends_food_upkeep_add: "$mod_planet_tec_transcends_food_upkeep_mult$"
+ mod_planet_tec_transcends_energy_upkeep_add: "$mod_planet_tec_transcends_energy_upkeep_mult$"
+ mod_planet_tec_transcends_consumer_goods_upkeep_add: "$mod_planet_tec_transcends_consumer_goods_upkeep_mult$"
+ mod_planet_tec_transcends_alloys_upkeep_add: "$mod_planet_tec_transcends_alloys_upkeep_mult$"
+ mod_planet_tec_transcends_physics_research_upkeep_add: "$mod_planet_tec_transcends_physics_research_upkeep_mult$"
+ mod_planet_tec_transcends_society_research_upkeep_add: "$mod_planet_tec_transcends_society_research_upkeep_mult$"
+ mod_planet_tec_transcends_engineering_research_upkeep_add: "$mod_planet_tec_transcends_engineering_research_upkeep_mult$"
+ mod_planet_tec_transcends_rare_crystals_upkeep_add: "$mod_planet_tec_transcends_rare_crystals_upkeep_mult$"
+ mod_planet_tec_transcends_volatile_motes_upkeep_add: "$mod_planet_tec_transcends_volatile_motes_upkeep_mult$"
+ mod_planet_tec_transcends_exotic_gases_upkeep_add: "$mod_planet_tec_transcends_exotic_gases_upkeep_mult$"
+ mod_planet_tec_transcends_unity_upkeep_add: "$mod_planet_tec_transcends_unity_upkeep_mult$"
+ mod_planet_tec_transcends_influence_upkeep_add: "$mod_planet_tec_transcends_influence_upkeep_mult$"
+ mod_planet_tec_transcends_sr_living_metal_upkeep_add: "$mod_planet_tec_transcends_sr_living_metal_upkeep_mult$"
+ mod_planet_tec_transcends_sr_zro_upkeep_add: "$mod_planet_tec_transcends_sr_zro_upkeep_mult$"
+ mod_planet_tec_transcends_sr_dark_matter_upkeep_add: "$mod_planet_tec_transcends_sr_dark_matter_upkeep_mult$"
+ mod_planet_tec_transcends_nanites_upkeep_add: "$mod_planet_tec_transcends_nanites_upkeep_mult$"
+ mod_planet_tec_transcends_minor_artifacts_upkeep_add: "$mod_planet_tec_transcends_minor_artifacts_upkeep_mult$"
+ mod_planet_tec_transcends_sr_tec_ai_power_upkeep_add: "$mod_planet_tec_transcends_sr_tec_ai_power_upkeep_mult$"
+ mod_planet_tec_transcends_all_research_upkeep_add: "$mod_planet_tec_transcends_all_research_upkeep_mult$"
+ mod_planet_tec_transcends_all_industrial_upkeep_add: "$mod_planet_tec_transcends_all_industrial_upkeep_mult$"
+ mod_planet_tec_transcends_all_basic_upkeep_add: "$mod_planet_tec_transcends_all_basic_upkeep_mult$"
+
  # pop_category_purge - Purged Pops
  mod_base_pop_category_purge: "Purged Pops"
 
