fixed the transend name XD

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -825,8 +825,8 @@ tec_jump_empty:0 "\n\n"
  mod_job_labour_hero_per_pop_short:0 "\n§G+1§! £mod_job_labour_hero_add£ per $VALUE$ £pop£"
 
 # ------------------------------------------------- Transcends
- job_transcend:0 "Transcend"
- job_transcend_plural:0 "Transcends"
+ job_transcend:0 "Transcendent"
+ job_transcend_plural:0 "Transcendents"
  job_transcend_desc:0 "These individuals are considered to have reached an illuminated state of consciousness."
  job_transcend_effect_desc:0 "£job_transcend£ $job_transcend_plural$ produce fair amount of §Y$tec_loc_unity$§!, £trigger_tec_research£ §YResearch§!, and reduce planetary §YCrime§!."
  mod_job_transcend_add:0 "$job_transcend$ Jobs"
