--- a/localisation/english/zz_evolved_categories_l_english.yml
+++ b/localisation/english/zz_evolved_categories_l_english.yml
@@ -63,6 +63,7 @@
  planet_colonists: "Colonists"
  planet_tec_trade_drones: "Blockchain Drones"
  planet_tec_labour_heroes: "Labour Heroes"
+ planet_tec_transcends: "Transcendents"
 
  planet_tec_batteries: "Organic Batteries"
 
