council naming fix

--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -36,12 +36,12 @@
 		councilor_civic_tec_regular_irenic_bureaucracy:0 "Embodiment of Order"
 		councilor_civic_tec_regular_irenic_bureaucracy_female:0 "$councilor_civic_tec_regular_irenic_bureaucracy$"
 		councilor_civic_tec_regular_irenic_bureaucracy_desc:0 "The $TITLE$ serves as both head bureaucrat and main representative of the government affairs, guiding its subordinates towards max efficiency."
-		councilor_civic_tec_regular_irenic_bureaucracy_custom_modifier:0 "Not needed"
+		councilor_civic_tec_regular_irenic_bureaucracy_custom_modifier:0 "§Y+$@councilor_civic_tec_regular_irenic_bureaucracy_bonus$§! $tec_loc_job_output$ while at §YPeace§!"
 
 		councilor_civic_tec_regular_archivist:0 "Archlibrarian"
 		councilor_civic_tec_regular_archivist_female:0 "$councilor_civic_tec_regular_archivist$"
 		councilor_civic_tec_regular_archivist_desc:0 "Few things are known of the private or public life of the $TITLE$, but tradition indicate its one of the few individuals who know and have access to each single archived file, each single ordered database."
-		councilor_civic_tec_regular_archivist_custom_modifier:0 "Not needed"
+		councilor_civic_tec_regular_archivist_custom_modifier:0 "§Y+$@councilor_civic_tec_regular_archivist_bonus$§! £unity£ from £influence£ §YResearch Agreements§!"
 
 		councilor_civic_tec_regular_occultist:0 "Keeper of Secrets"
 		councilor_civic_tec_regular_occultist_female:0 "$councilor_civic_tec_regular_occultist$"
@@ -123,12 +123,14 @@
 		councilor_civic_tec_regular_master_engineers:0 "Chief Mega-Engineer"
 		councilor_civic_tec_regular_master_engineers_female:0 "$councilor_civic_tec_regular_master_engineers$"
 		councilor_civic_tec_regular_master_engineers_desc:0 "$TITLE$ approve, enhance and control the new inventions and structural developments of the empire."
-		councilor_civic_tec_regular_master_engineers_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_master_engineers_custom_modifier:0 "§Y+2.5%§! Starbase Upgrade Speed\n§Y+2.5%§! Megastructure Build Speed"
+		# Improve loc ^
 
 		councilor_civic_tec_regular_patronage:0 "Talent Seeker"
 		councilor_civic_tec_regular_patronage_female:0 "$councilor_civic_tec_regular_patronage$"
 		councilor_civic_tec_regular_patronage_desc:0 "$TITLE$s have the task of finding new talents among promotions and young promises."
-		councilor_civic_tec_regular_patronage_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_patronage_custom_modifier:0 "§Y+1§! Leader capacity each §Y3§! Councilor levels\n§Y+2.5%§! Leader Experience Gain"
+		# Improve loc ^
 
 		councilor_civic_tec_regular_surface_exploiters:0 "Extraction Monitor"
 		councilor_civic_tec_regular_surface_exploiters_female:0 "$councilor_civic_tec_regular_surface_exploiters$"
@@ -138,27 +140,33 @@
 		councilor_civic_tec_regular_political_virtue:0 "Democratic Advisor"
 		councilor_civic_tec_regular_political_virtue_female:0 "$councilor_civic_tec_regular_political_virtue$"
 		councilor_civic_tec_regular_political_virtue_desc:0 "The empire $TITLE$ is tasked with searching the best democratic ways of representing the diverse ideas of its society."
-		councilor_civic_tec_regular_political_virtue_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_political_virtue_custom_modifier:0 "§Y-1§! Empire Sprawl from Pops\n§Y+1%§! Faction Approval"
+		# Improve loc ^
+
 
 		councilor_civic_tec_regular_eco_keepers:0 "Elder Druid"
 		councilor_civic_tec_regular_eco_keepers_female:0 "$councilor_civic_tec_regular_eco_keepers$"
 		councilor_civic_tec_regular_eco_keepers_desc:0 "Wisest amongst its brethren, the $TITLE$ embraces nature at a deeper level, being a paragon of the natural faith."
-		councilor_civic_tec_regular_eco_keepers_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_eco_keepers_custom_modifier:0 "§Y+10%§! £job_druid£ Druid output"
+		# Improve loc ^
 
 		councilor_civic_tec_regular_eco_engineers:0 "Environmental Architect"
 		councilor_civic_tec_regular_eco_engineers_female:0 "$councilor_civic_tec_regular_eco_engineers$"
 		councilor_civic_tec_regular_eco_engineers_desc:0 "The $TITLE$ ensures the reformation and recreation of terrains and spaces is perfect or close to perfection."
-		councilor_civic_tec_regular_eco_engineers_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_eco_engineers_custom_modifier:0 "§Y-2.5§! Terraforming Cost"
+		# Improve loc ^
 
 		councilor_civic_tec_regular_evolutionary_architects:0 "High Evolutionary"
 		councilor_civic_tec_regular_evolutionary_architects_female:0 "$councilor_civic_tec_regular_evolutionary_architects$"
 		councilor_civic_tec_regular_evolutionary_architects_desc:0 "Heading a elite team of genetic engineers, the $TITLE$ tailors a new generation of improved, enhanced and better individuals."
-		councilor_civic_tec_regular_evolutionary_architects_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_evolutionary_architects_custom_modifier:0 "§Y-2.5§! Species Modification Cost"
+		# Improve loc ^
 
 		councilor_civic_tec_regular_machine_cult:0 "Fabricator-Logis"
 		councilor_civic_tec_regular_machine_cult_female:0 "$councilor_civic_tec_regular_machine_cult$"
 		councilor_civic_tec_regular_machine_cult_desc:0 "The $TITLE$ serves as the head of sub-management regulators of the empire cult, ensuring the robotic development is accelerated and propagated amongst the population."
-		councilor_civic_tec_regular_machine_cult_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_machine_cult_custom_modifier:0 "§Y+0.05§! £unity£ Unity from Robotic Pops"
+		# Improve loc ^
 
 		councilor_civic_tec_regular_war_engineers:0 "Siegemaster"
 		councilor_civic_tec_regular_war_engineers_female:0 "Siegemistress"
@@ -168,12 +176,13 @@
 		councilor_civic_tec_regular_naval_traditions:0 "Battle Commander"
 		councilor_civic_tec_regular_naval_traditions_female:0 "$councilor_civic_tec_regular_naval_traditions$"
 		councilor_civic_tec_regular_naval_traditions_desc:0 "$TITLE$ control the battle before it even starts, planning the strategies accordingly and adding a big advantage to the empire."
-		councilor_civic_tec_regular_naval_traditions_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_naval_traditions_custom_modifier:0 "§Y+0.5§! £unity£ Unity from Anchorages\n§Y+0.5§! £unity£ Unity from Shipyards"
+		# Improve loc ^
 
 		councilor_civic_tec_regular_land_of_plenty:0 "Provider of Plenty"
 		councilor_civic_tec_regular_land_of_plenty_female:0 "$councilor_civic_tec_regular_land_of_plenty$"
 		councilor_civic_tec_regular_land_of_plenty_desc:0 "The $TITLE$ ensures the population get access to all the riches and wonders their society can create."
-		councilor_civic_tec_regular_land_of_plenty_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_land_of_plenty_custom_modifier:0 "§Y+5%§! Effect of the Land of Plenty £planet£ §YDesignation Bonuses§!"
 
 		councilor_civic_tec_regular_globalism:0 "Commerce Manager"
 		councilor_civic_tec_regular_globalism_female:0 "$councilor_civic_tec_regular_globalism$"
@@ -204,7 +213,9 @@
 		councilor_civic_tec_regular_research_council:0 "Development Assistant"
 		councilor_civic_tec_regular_research_council_female:0 "$councilor_civic_tec_regular_research_council$"
 		councilor_civic_tec_regular_research_council_desc:0 "The $TITLE$ is tasked with a direct cooperation and regulation with the empire main researchers."
-		councilor_civic_tec_regular_research_council_custom_modifier:0 "This councilor inherits the §Y$tec_loc_research_resources$§! production of the empire £scientist£ §Y$councilor_research$§!"
+		councilor_civic_tec_regular_research_council_custom_modifier:0 "§Y+$@councilor_civic_tec_regular_research_council_bonus$§! $tec_loc_edict_cap_icon$ from £job_researcher£ §YResearcher Jobs§!"
+
+		#"This councilor inherits the §Y$tec_loc_research_resources$§! production of the empire £scientist£ §Y$councilor_research$§!"
 
 		councilor_civic_tec_regular_scientific_belief:0 "Grand Theorem Analyst"
 		councilor_civic_tec_regular_scientific_belief_female:0 "$councilor_civic_tec_regular_scientific_belief$"
@@ -462,7 +473,7 @@
 	councilor_civic_tec_corporate_scientific_corp:0 "Scientific Monitor"
 	councilor_civic_tec_corporate_scientific_corp_female:0 "$councilor_civic_tec_corporate_scientific_corp$"
 	councilor_civic_tec_corporate_scientific_corp_desc:0 "The $TITLE$ ensures the research process is as profitable as possible."
-	councilor_civic_tec_corporate_scientific_corp_custom_modifier:0 "REPLACE_ME"
+	councilor_civic_tec_corporate_scientific_corp_custom_modifier:0 "§Y+$@councilor_civic_tec_regular_archivist_bonus$§! $tec_loc_research_resources_icon$ from  £influence£ §YResearch Agreements§!"
 
 	councilor_civic_tec_corporate_eco_exploiter_corp:0 "Exploitation Manager"
 	councilor_civic_tec_corporate_eco_exploiter_corp_female:0 "$councilor_civic_tec_corporate_eco_exploiter_corp$"
