--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -48,6 +48,7 @@
 	tec_loc_engineering:0 "£engineering£ §Y$engineering_research$§!"
 	tec_loc_society:0 "£society£ §Y$society_research$§!"
 	tec_loc_physics:0 "£physics£ §Y$physics_research$§!"
+	tec_loc_research_resources_icon:0 "£trigger_tec_research£"
 	tec_loc_research_resources:0 "£trigger_tec_research£ §YResearch§!"
 	tec_loc_research_speed:0 "£job_researcher£ §YResearch Speed§!"
 
@@ -73,6 +74,7 @@
 	tec_loc_trade_value_icon: "£trade_value£"
 	tec_loc_trade_value: "£trade_value£ $TRADE_VALUE$"
 	tec_loc_pop_growth: "£mod_pop_growth_speed£ Pop Growth Speed"
+	tec_loc_job_output: "£job£ Job Output"
 
 
 	tec_loc_building_slots: "$planet_automation_building_slot$"
