--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -352,6 +352,10 @@
  tr_tec_might_3B_tooltip:0 "§YEnemy Claim Influence Cost§! increased by §G20%§!" #.\nEach planet will gain §G10§! §YDefense armies§!.
  tr_tec_might_3B_delayed:0 "Protect and intervene, defend and survive; No one will break the will of our empire, nor go through our defenses, and daring to attempt any hostility against us will be a bold, and useless attempt, as our will is pristine and unbreakable."
 
+ tr_tec_might_3C:0 "Relentless Offensive"
+ tr_tec_might_3C_tooltip:0 "Ship Fire Rate: §G+5%§!\nShip Movement Speed: §G+5%§!" #.\nEach planet will gain §G10§! §YDefense armies§!.
+ tr_tec_might_3C_delayed:0 "No matter the enemy defenses, no matter physical barriers, our will is pristine and our might undeniable."
+
  tr_tec_might_4:0 "Power overwhelming"
  tr_tec_might_4_tooltip:0 "Defeating an enemy fleet will provide a small amount of £influence£ §YInfluence§!."
  tr_tec_might_4_delayed:0 "Though we should not just make a proof of our superiority, the charred and ruined remains of whatever tries to defy us will be enough."
